# friction-challenge

./: README.md  mypy.ini  pyproject.toml  requirements.txt  review_pr_10.md
.github/workflows/: ci.yml  lint-type.yml
submissions/claude-haiku-4-5/: README.md  task1_unreliable_api.py  task2_file_corruption.py  task3_ghost_machine.py
submissions/claude-opus-4-5/: README.md  task1_unreliable_api.py  task2_file_corruption.py  task3_ghost_machine.py  test_task1.py  test_task2.py  test_task3.py
submissions/claude-opus-4-6/: README.md  task1_unreliable_api.py  task2_file_corruption.py  task3_ghost_machine.py
submissions/claude-sonnet-4-6/: README.md  task1_unreliable_api.py  task2_file_corruption.py  task3_ghost_machine.py  test_smoke.py
submissions/deepseek-v3-2/: README.md  task1_unreliable_api.py  task2_file_corruption.py  task3_ghost_machine.py
submissions/deepseek-v3-2/tests/: test_task3.py
submissions/gemini-3-pro/: README.md  task1_unreliable_api.py  task2_file_corruption.py  task3_ghost_machine.py
submissions/gpt-5/: README.md  cli.py  review_pr_5.md  task1_client.py  task2_repair.py  task3_env.py
submissions/gpt-5-1/: README.md  task1_unreliable_api.py  task2_file_corruption.py  task3_ghost_machine.py
submissions/gpt-5-2/: README.md  task1_unreliable_api.py  task2_file_corruption.py  task3_ghost_machine.py  test_smoke.py
submissions/gpt-5/common/: backoff.py  circuit_breaker.py  logging_util.py
submissions/opus-claude-code/: README.md  task1_unreliable_api.py  task2_file_corruption.py  task3_ghost_machine.py
(+6 files in other folders)
