[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt5-friction"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "requests==2.32.3",
  "python-dateutil==2.9.0.post0",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
exclude = [
  ".git", ".github", ".pytest_cache",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
]
ignore = [
  "E203", "E266", "E501",
]
